<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">StoreJet Cloud</string>
    <string name="storage_name">Storage</string>
    <string name="backups_name">Backups</string>
    <string name="downloads_name">Downloads</string>
    <string name="shares_name">Shares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rights_reserved">\u00A92016 Transcend Information Inc.\nAll rights reserved.</string>
    <string name="ip">IP</string>
    <string name="title_nas_display_name_default">RTK - Nas</string>
    <string name="title_nas_display_name_jupiter_media">RTK - Jupiter Media Nas</string>
    <string name="title_nas_display_name_jupiter_pure">RTK - Jupiter Pure Nas</string>
    <string name="title_nas_display_name_pheonix_media">RTK - Pheonix Media Nas</string>
    <string name="title_nas_display_name_pheonix_pure">RTK - Pheonix Pure Nas</string>
    <string name="pref_name">NAS PREFERENCE</string>
    <string name="pref_remote_access_category">REMOTE ACCESS CATEGORY</string>
    <string name="pref_remote_access">REMOTE ACCESS</string>
    <string name="pref_auto_backup">AUTO BACKUP</string>
    <string name="pref_backup_video">BACKUP VIDEO</string>
    <string name="pref_backup_scenario">BACKUP MODE</string>
    <string name="pref_backup_location">BACKUP LOCATION</string>
    <string name="pref_backup_source">BACKUP SOURCE</string>
    <string name="pref_backup_error_task">BACKUP ERROR TASK</string>
    <string name="pref_download_location">DOWNLOAD LOCATION</string>
    <string name="pref_share_location">SHARE LOCATION</string>
    <string name="pref_cache_size">CACHE SIZE</string>
    <string name="pref_cache_clean">CACHE CLEAN</string>
    <string name="pref_hostname">HOSTNAME</string>
    <string name="pref_username">USERNAME</string>
    <string name="pref_password">PASSWORD</string>
    <string name="pref_uuid">UUID</string>
    <string name="pref_serial_num">SERIAL NUM</string>
    <string name="pref_mac">MAC ADDRESS</string>
    <string name="pref_nas_name">NAS NAME</string>
    <string name="pref_hash_verified_time">HASH VERIFIED TIME</string>
    <string name="pref_initial">INITIAL SETUP</string>
    <string name="pref_introduce">INTRODUCE SETUP</string>
    <string name="pref_local_hostname">LOCAL HOSTNAME</string>
    <string name="pref_cloud_username">CLOUD USERNAME</string>
    <string name="pref_cloud_password">CLOUD PASSWORD</string>
    <string name="pref_cloud_status">CLOUD STATUS</string>
    <string name="pref_cloud_ip">CLOUD IP</string>
    <string name="pref_cloud_token">CLOUD AUTHTOKEN</string>
    <string name="pref_cloud_mode">CLOUD MODE</string>
    <string name="pref_cloud_uuid">CLOUD UUID</string>
    <string name="pref_cloud_account_status">CLOUD ACCOUNT STATUS</string>
    <string name="pref_fb_account_status">FB ACCOUNT STATUS</string>
    <string name="pref_file_sort_type">FILE SORT TYPE</string>
    <string name="pref_file_view_type">FILE VIEW TYPE</string>
    <string name="pref_file_picker_view_type">FILE PICKER VIEW TYPE</string>
    <string name="pref_music_type">MUSIC TYPE</string>
    <string name="pref_about">ABOUT</string>
    <string name="pref_about_legal">ABOUT LEGAL</string>
    <string name="pref_about_term_of_use">ABOUT TERMS OF USE</string>
    <string name="pref_about_license">ABOUT LICENSE</string>
    <string name="pref_about_contact">ABOUT CONTACT OF US</string>
    <string name="pref_info_path">INFO PATH</string>
    <string name="pref_info_name">INFO NAME</string>
    <string name="pref_info_type">INFO TYPE</string>
    <string name="pref_info_time">INFO TIME</string>
    <string name="pref_info_size">INFO SIZE</string>
    <string-array name="sort_items">
        <item>@string/type</item>
        <item>@string/date</item>
        <item>@string/reverse_date</item>
        <item>@string/name</item>
        <item>@string/reverse_name</item>
    </string-array>
    <string-array name="cache_size_entries">
        <item>100MB</item>
        <item>200MB</item>
        <item>500MB</item>
    </string-array>
    <string name="facebook_app_id">1672519146397506</string>
    <string name="about">About</string>
    <string name="account">Account:</string>
    <string name="app_version">App Version</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confrim_password">Confirm password</string>
    <string name="copy">Copy</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="dlg_msg_delete">Are you sure to delete files?</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="empty">Empty</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="error">Error</string>
    <string name="folder">Folder</string>
    <string name="help">Help</string>
    <string name="information">Information</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="more">More</string>
    <string name="move">Move</string>
    <string name="msg_enteradminpw">Please enter Administrator Password</string>
    <string name="msg_copy_to">Copy To…</string>
    <string name="msg_location_on_top">Already at top-level folder!</string>
    <string name="msg_new_folder">New Folder</string>
    <string name="msg_openinvideo">Please choose an App to play video</string>
    <string name="name">Name</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="password">Password</string>
    <string name="photo">Photo</string>
    <string name="refresh">Refresh</string>
    <string name="rename">Rename</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="size">Size</string>
    <string name="status">Status</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="type">Type</string>
    <string name="untitled_folder">Untitled Folder</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading</string>
    <string name="access_error">Access deny</string>
    <string name="add_device">Add new StoreJet Cloud</string>
    <string name="all_networks">Wi-Fi &amp; Cellular network</string>
    <string name="advanced_setting">Advanced settings</string>
    <string name="use_cellular_network">Use Cellular network</string>
    <string name="already_have_account">Do you already have an account?</string>
    <string name="always">Always</string>
    <string name="appwizard1_freely_access">Freely access all your files stored on StoreJet Cloud anywhere through mobile APP.</string>
    <string name="appwizard1_remote_access">Remote Access</string>
    <string name="appwizard2_storejet_cloud_can_automatically_back_u">StoreJet Cloud can automatically back up new photos and videos taken today on your mobile devices.</string>
    <string name="appwizard3_media_streaming">Media streaming</string>
    <string name="appwizard3_storejet_cloud_airplay_casting_your_vid">StoreJet Cloud AirPlay/casting your videos, films and music to Apple TV or Chromecast.</string>
    <string name="auto_backup">Auto backup</string>
    <string name="available">Available</string>
    <string name="backup_destination">Backup Destination Path</string>
    <string name="backup_fail">Backup failed</string>
    <string name="backup_fail_network_unreachable">StoreJet Cloud unreachable</string>
    <string name="backup_fail_no_space">No enough disk space</string>
    <string name="backup_file">Backup file</string>
    <string name="backup_source">Backup Source Path</string>
    <string name="backup_success">Backup success</string>
    <string name="backup_videos">Backup Videos</string>
    <string name="bind">Set Up</string>
    <string name="cache">Cache</string>
    <string name="camera_backup">Camera backup</string>
    <string name="capacity">Capacity</string>
    <string name="charge_only">Charge only</string>
    <string name="choose_a_scenario">choose a scenario</string>
    <string name="clean">Clean</string>
    <string name="confirm_password_error">Please confirm your password</string>
    <string name="conj_used">%1$s used</string>
    <string name="contact">Contact</string>
    <string name="cut">Cut</string>
    <string name="detail">Detail</string>
    <string name="device">Device</string>
    <string name="device_offline">Device is offline</string>
    <string name="disk">Disk</string>
    <string name="disk_info">Disk Information</string>
    <string name="disk_smart">S.M.A.R.T</string>
    <string name="disk_smart_info">Help to check disk status</string>
    <string name="done">Done</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="edit_mode">Edit mode</string>
    <string name="email">Email</string>
    <string name="email_is_taken">Email is already taken</string>
    <string name="empty_account">Empty Account</string>
    <string name="empty_email">Empty Email</string>
    <string name="empty_password">Empty Password</string>
    <string name="empty_uuid">Empty UUID, we can\'t set up</string>
    <string name="error_format">Error format</string>
    <string name="exit">Exit</string>
    <string name="fb_request_email_permission">Please grant the email address permission for Facebook login</string>
    <string name="find_nas">Find StoreJet Cloud</string>
    <string name="forget_password">forget password?</string>
    <string name="forget_password_send">The password mail is sent. Please check your mail.</string>
    <string name="forget_password_title">Enter your email to send the reset password email</string>
    <string name="forget_password_warning">Current password will be deprecated. Are you sure to send the email?</string>
    <string name="last_modified">Last modified</string>
    <string name="legal">Privacy</string>
    <string name="licenses">Licenses</string>
    <string name="location">Location</string>
    <string name="msg_auto_backup">Auto upload your camera photos and video to StoreJet Cloud.</string>
    <string name="msg_backup_by_cellular">Use Cellular network to backup your camera photos and video.</string>
    <string name="msg_backup_scenario">Choose a scenario to backup your camera photos and video.</string>
    <string name="remote_access_inactive">Inactive</string>
    <string name="resend">Resend</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>
    <string name="upload_modified_file">Do you want to upload the modified file?</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_no">NO</string>
    <string name="feedback">Feedback</string>
    <string name="pref_disk_info">DISK INFORMATION</string>
    <string name="pref_device_info">DEVICE INFORMATION</string>
    <string name="pref_firmware_version">FIRMWARE VERSION</string>
    <string name="pref_backup_device">BACKUP DEVICE</string>
    <string name="settings_download_location">Download Location</string>
    <string name="settings_auto_backup_subtitle">Auto backup your camera folder</string>
    <string name="settings_disk_info_title">Disk Manager</string>
    <string name="settings_disk_info_subtitle">StoreJet Cloud Disk Status</string>
    <string name="settings_device_info_title">Device Information</string>
    <string name="settings_device_info_subtitle">StoreJet Cloud Status</string>
    <string name="settings_firmware_version_title">Firmware Version</string>
    <string name="backup_device">Backup Device</string>
</resources>