<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout="@layout/preference_item">

    <PreferenceCategory
        android:layout="@layout/preference_category_widget">

        <Preference
            android:key="@string/pref_download_location"
            android:layout="@layout/preference_item"
            android:summary="xxxxxx"
            android:title="@string/settings_download_location" />

        <Preference
            android:key="@string/pref_auto_backup"
            android:layout="@layout/preference_item"
            android:title="@string/auto_backup"
            android:summary="@string/settings_auto_backup_subtitle" />

        <Preference
            android:key="@string/pref_disk_info"
            android:layout="@layout/preference_item"
            android:title="@string/settings_disk_info_title"
            android:summary="@string/settings_disk_info_subtitle" />

        <Preference
            android:key="@string/pref_device_info"
            android:layout="@layout/preference_item"
            android:title="@string/settings_device_info_title"
            android:summary="@string/settings_device_info_subtitle" />

        <Preference
            android:key="@string/pref_firmware_version"
            android:layout="@layout/preference_item"
            android:title="@string/settings_firmware_version_title"
            android:summary="xxxxxx" />

        <Preference
            android:key="@string/pref_cache_clean"
            android:layout="@layout/preference_item"
            android:title="@string/cache"
            android:summary="xxxxxx" />

        <Preference
            android:key="@string/pref_about"
            android:layout="@layout/preference_item"
            android:title="@string/about" />

    </PreferenceCategory>

    <PreferenceCategory>
        <!-- footer -->
    </PreferenceCategory>
</PreferenceScreen>