<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout="@layout/preference_item">

    <PreferenceCategory>
        <!-- header -->
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="@string/camera_backup">

        <CheckBoxPreference
            android:key="@string/pref_auto_backup"
            android:layout="@layout/preference_item"
            android:title="@string/auto_backup"
            android:summary="@string/msg_auto_backup"
            android:widgetLayout="@layout/switch_button"/>

        <ListPreference
            android:key="@string/pref_backup_scenario"
            android:layout="@layout/preference_item"
            android:title="@string/always"
            android:summary="@string/msg_backup_scenario"
            android:dialogTitle="@string/choose_a_scenario"
            android:entries="@array/backup_scenario_entries"
            android:entryValues="@array/backup_scenario_values"
            />

        <Preference
            android:key="@string/pref_backup_location"
            android:layout="@layout/preference_item"
            android:title="@string/location"
            android:summary="/" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="@string/downloads">

        <Preference
            android:key="@string/pref_download_location"
            android:layout="@layout/preference_item"
            android:title="@string/location"
            android:summary="/" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="@string/cache">
        <!--
        <ListPreference
            android:key="@string/pref_cache_size"
            android:layout="@layout/preference_item"
            android:title="@string/size"
            android:summary="100MB"
            android:entries="@array/cache_size_entries"
            android:entryValues="@array/cache_size_entries" />
        -->
        <Preference
            android:key="@string/pref_cache_clean"
            android:layout="@layout/preference_item"
            android:title="@string/clean" />

    </PreferenceCategory>

    <PreferenceCategory>
        <!-- footer -->
    </PreferenceCategory>

</PreferenceScreen>