<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_1st"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/sjc_ic_storejetcloud"
            android:title="@string/app_name" />

    </group>

    <group
        android:id="@+id/nav_group_2st"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/sjc_ic_myphone"
            android:title="@string/device" />

        <item
            android:id="@+id/nav_sdcard"
            android:icon="@drawable/sjc_ic_myphone"
            android:title="@string/drawer_sdcard" />

        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/sjc_ic_download"
            android:title="@string/download" />

    </group>

    <group
        android:id="@+id/nav_group_3st"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/sjc_ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/sjc_ic_help"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/sjc_ic_userfeedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_logout_gray_24dp"
            android:title="Login to other StoreJet Cloud" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_gray_24dp"
            android:title="@string/logout" />
    </group>

</menu>
