<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/media_route_menu_item"
        android:title="Cast"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>

    <item
        android:id="@+id/file_manage_viewer_action_more"
        android:icon="@drawable/ic_toolbar_more_white"
        android:title="@string/more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/file_manage_viewer_action_refresh"
                android:icon="@drawable/ic_toolbar_sync_white"
                android:title="@string/refresh"
                app:showAsAction="never" />

            <item
                android:id="@+id/file_manage_viewer_action_sort"
                android:icon="@drawable/ic_toolbar_sort_white"
                android:title="@string/sort"
                app:showAsAction="never" />

            <item
                android:id="@+id/file_manage_viewer_action_upload"
                android:icon="@drawable/ic_toolbar_upload_white"
                android:title="@string/upload"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>
