<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/file_manage_viewer_action_more"
        android:icon="@drawable/ic_more_vert_gray_24dp"
        android:title="@string/more"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/file_manage_viewer_action_refresh"
                android:icon="@drawable/ic_sync_gray_24dp"
                android:title="@string/refresh"
                app:showAsAction="never" />

            <item
                android:id="@+id/file_manage_viewer_action_view"
                android:icon="@drawable/ic_view_module_gray_24dp"
                android:title="@string/view"
                app:showAsAction="never" />

            <item
                android:id="@+id/file_manage_viewer_action_sort"
                android:icon="@drawable/ic_sort_gray_24dp"
                android:title="@string/sort_by"
                app:showAsAction="never" />

            <item
                android:id="@+id/file_manage_viewer_action_search"
                android:icon="@drawable/ic_search_gray_24dp"
                android:title="@string/search"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>
