<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/email"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/remote_access_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="USER EMAIL"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/remote_access_status"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/remote_access_inactive"
            android:textColor="@android:color/darker_gray" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/remote_access_resend_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccentDialog"
            android:text="@string/resend"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/remote_access_delete_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/logout"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/remote_access_list_title"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="8dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/bind_nas_list"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/remote_access_list"
            android:layout_width="306dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
